--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "14.1.0",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
+    "node-media-server": "^2.6.2",
     "nodemailer": "^6.8.0",
     "openai": "^5.1.0",
     "react": "^18.2.0",
